manifests/03_07/fault-injection-delay.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: details
spec:
  hosts:
  - details
  http:
  - fault:
      delay:
        fixedDelay: 10s
        percentage:
          value: 100
    match:
    - headers:
        end-user:
          exact: user1
    route:
    - destination:
        host: details
        subset: v2
  - route:
    - destination:
        host: details
        subset: v1
